--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <!-- 首页 -->
+
+    <!-- 首页 -->
     <string name="app_name">YoHey</string>
     <string name="hello_world">Hello world!</string>
     <string name="tuijiankaihei">推荐开黑</string>
@@ -15,7 +16,7 @@
     <string name="bojin">铂金</string>
     <string name="zhuanshi">钻石</string>
     <!-- 首页底部按钮 -->
-      <string name="homepage">首页</string>
+    <string name="homepage">首页</string>
     <string name="friends">好友</string>
     <string name="lufriends">LU友圈</string>
     <string name="me">我</string>
@@ -23,7 +24,7 @@
     <string name="account">账号</string>
     <string name="password">密码</string>
     <string name="remember_pw">记住密码</string>
-    <string name="forget_pw">忘记密码</string>
+    <string name="forget_pw">忘记密码?</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="QQ_login">QQ登录</string>
@@ -50,4 +51,23 @@
     <string name="score">积分商城</string>
     <string name="system_set">系统设置</string>
     <string name="sign_in">签到</string>
+
+    <!-- 个人资料 -->
+    <string name="others_impression">他人印象</string>
+    <string name="recruitment_information">招募信息</string>
+    <string name="record">战绩</string>
+    <string name="ao_virginia">艾欧尼亚</string>
+    <!-- 注册 -->
+    <string name="china">中国+86</string>
+    <string name="fill_in_your_phone_number">填写手机号码</string>
+	<string name="enter_your_phone_number">请输入手机号码</string>
+	<string name="next">下一步</string>
+	<string name="terms_of_use">我已阅读并同意使用条款和隐私政策</string>
+	<string name="another_one">换一张</string>
+	<string name="safety_verification">安全验证</string>
+	<string name="enter_confirmation_code">请输入验证码</string>
+	<string name="submit">提交</string>
+	<string name="resend">重新发送</string>
+	<string name="message_verification_code">请输入短信验证码</string>
+	<string name="binding">将此手机号与QQ号绑定，提高账号安全性</string>
 </resources>
