--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,7 +95,9 @@
     <string name="more_more">更多....</string>
     <string name="my_posted_messages">发过帖子</string>
     <string name="participation_posts">加入帖子</string>
-
+    <string name="hide">隐藏</string>
+    <string name="report">举报</string>
+    
     <!-- 阿里雲引用 -->
     <string name="iconfont">&#13804;</string>
     <string name="gt">&#xe624;</string>
