--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="account">账号</string>
     <string name="password">密码</string>
     <string name="remember_pw">记住密码</string>
-    <string name="forget_pw">忘记密码?</string>
+    <string name="forget_pw">忘记密码</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="QQ_login">QQ登录</string>
