官方资讯界面

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="cancel">取消</string>
     <string name="share">分享</string>
     <string name="send">發送</string>
-    <string name="say">我也说一句</string>
+    <string name="say">我也说一句....</string>
     <string name="personal_post">个人发帖</string>
     <string name="posts">帖子内容。。。</string>
     <string name="permission_settings">权限设置</string>
