--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -111,7 +111,11 @@
     <string name="participation_posts">加入帖子</string>
     <string name="hide">隐藏</string>
     <string name="report">举报</string>
-
+    <string name="forwarding">转发</string>
+    <string name="comments">评论</string>
+    <string name="praise">赞</string>
+    <string name="to_return">返回</string>
+    <string name="details">详情</string>
     <!-- 阿里雲引用 -->
     <string name="iconfont">&#13804;</string>
     <string name="gt">&#xe624;</string>
