--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,7 +105,7 @@
     <string name="new_frieds">新的朋友</string>
     <string name="favorite">喜爱最多</string>
     <string name="xinlang">新浪微博</string>
-    <string name="qqweb">QQ微博</string>
+    <string name="qqweb">腾讯微博</string>
     <string name="posted_messages">我发过的帖子</string>
     <string name="post_added">我加入的帖子</string>
     <string name="more_more">更多....</string>
